remove export, help text, version numbering, and mobile nav
+ remove hour/min from version number
+ remove help text, recenter search
+ hard coded webpack version
+ remove onClick handlers for toggling menu
+ menu no longer hamburgers, removed export
+ added important to manager link styling

--- a/src/css/sections/employee-manager.less
+++ b/src/css/sections/employee-manager.less
@@ -1,13 +1,13 @@
 .employee-manager-row {
   background:none!important;
-  border:none;
+  border:none!important;
   padding:0!important;
-  font: inherit;
-  cursor: pointer;
-  color: @brand-primary;
-  outline: none;
+  font: inherit!important;
+  cursor: pointer!important;
+  color: @brand-primary!important;
+  outline: none!important;
 }
 .employee-manager-row:hover {
-  text-decoration: underline;
-  color: darken(@brand-primary, 15%)
+  text-decoration: underline!important;
+  color: darken(@brand-primary, 15%)!important;
 }
