--- a/src/css/style.less
+++ b/src/css/style.less
@@ -7,6 +7,7 @@
 @import "components/pagination";
 @import "components/print";
 @import "components/utilities";
+@import "components/images";
 // Sections
 @import "sections/header";
 @import "sections/footer";
