--- a/src/css/sections/header.less
+++ b/src/css/sections/header.less
@@ -44,7 +44,7 @@
   .header-title {
     font-size: 1.3em;
     margin: 0 !important;
-    padding: floor(1.8 * @header-padding) !important;
+    padding: @header-padding !important;
     float: left;
 
     > a {
